# temet

./: .gitignore  .hgignore  .startup.py  CMakeLists.txt  README.md  TestNB.ipynb  TestNB_IDL.ipynb  TestNB_Julia.ipynb  make_offsets.py  matplotlibrc  pyproject.toml  readtreeHDF5.py  requirements.txt  setup.py  sublink.py  test.py
.github/workflows/: pypi.yaml  ruff.yml  run_tests.yml
ArepoVTK/: __init__.py  job_monitor.py  png.py  pyramid.py  vtk.py  webgl.py
ICs/: CoffeeICs.py  GasCloud_Hernquist.py  GasCloud_NFW.py  GasCloud_NFW_tracers.py  KelvinHelmholtz.py  ResimMakePartLoad.py  Shocks2D_ICs.py  YeeVortex_ICs.py  __init__.py  readSpoonMesh.py  sod.py  util.py  utilities.py
Mark/: conversions.py  ray_cast.py  readhaloHDF5.py  readsnapHDF5.py  readsubfHDF5.py
Mark/GALAXEV/: MakeBCHDF5Table.py  MakeBCHDF5Table_extended.py  README  bc2003_hr_m22_chab_ssp.1ABmag  bc2003_hr_m22_chab_ssp.1color  bc2003_hr_m32_chab_ssp.1ABmag  bc2003_hr_m32_chab_ssp.1color  bc2003_hr_m42_chab_ssp.1ABmag  bc2003_hr_m42_chab_ssp.1color  bc2003_hr_m52_chab_ssp.1ABmag  bc2003_hr_m52_chab_ssp.1color  bc2003_hr_m62_chab_ssp.1ABmag  bc2003_hr_m62_chab_ssp.1color  bc2003_hr_m72_chab_ssp.1ABmag  bc2003_hr_m72_chab_ssp.1color  get_magnitudes.py  stellar_photometrics_extended.hdf5  test.py
Mark/illustris_dm_ids/: make_peanohilbert_ids.py
cosmo/: __init__.py  auxcatalog.py  cloudy.py  clustering.py  color.py  galaxyColor.py  hydrogen.py  kCorr.py  lightcone.py  load.py  mergertree.py  perf.py  skirt.py  spectrum.py  stellarPop.py  tracerEvo.py  util.py  xray.py  zooms.py
data/chen/: chen18_table1.txt
data/dsouza/: ds2015_fig7.txt
data/hilton/: DR5_cluster-catalog_v1.0b3.txt
data/johnson/: j15_table1.txt
data/zahedy/: zahedy18_tableA.txt
docs/: advanced.rst  catalogs.rst  conf.py  cookbook.rst  features.rst  first_steps.rst  getting_started.rst  index.rst  installation.rst  loading.rst  parallelism.rst  plotting.rst  quantities.rst  visualization.rst
dome_test/: transRGB_met.txt  transRGB_rho.txt  transRGB_temp.txt
load/: __init__.py  auxcat.py  data.py  groupcat.py  snapshot.py
obs/: __init__.py  erosita.py  galaxySample.py  mcmcTesting.py  plot.py  sdss.py
plot/: __init__.py  bulletCluster.py  cloudy.py  clustering.py  color.py  compareTwoHalos.py  config.py  cosmoGeneral.py  cosmoMisc.py  galaxyColor.py  general.py  globalComp.py  outflows.py  oxygen.py  quantities.py  sizes.py
projects/: __init__.py  azimuthalAngleCGM.py  bulletCluster.py  clustering.py  color.py  color_analysis.py  explore.py  lrg.py  mg2emission.py  outflows.py  outflows_analysis.py  outflows_vis.py  oxygen.py  rshock.py  tngcluster.py  xrayAngularDependence.py  zooming2.py
temet/: __init__.py  matplotlibrc  test.py
temet/ICs/: CoffeeICs.py  GasCloud_NFW.py  KelvinHelmholtz.py  ResimMakePartLoad.py  SetupCoffeeICs.pro  Shocks2D_ICs.py  __init__.py  coffee.py  coffee_readSpoonMesh.py  halo_Hernquist.py  halo_NFW_tracers.py  kelvin_helmholtz.py  sedov_solution.py  shocks2d.py  utilities.py  yee_vortex.py
temet/ML/: __init__.py  explore.py  llm.py  smhm.py  smhm_sbi.py  spectra.py
temet/catalog/: __init__.py  box.py  common.py  group.py  maps.py  profile.py  subhalo.py  temporal.py
temet/collab/: __init__.py  rubin.py  (+6 more)
tenet/: __init__.py  matplotlibrc  test.py
tests/: test_kcorr.py  test_lightcone.py  test_mergertree.py  test_rotation.py  test_sim.py  test_spectra.py  test_sphmap.py  test_tpcf.py  test_treesearch.py  test_util.py  test_voronoiray.py
tracer/: __init__.py  tracerEvo.py  tracerMC.py  tracerPlot.py
util/: Makefile  __init__.py  boxRemap.py  color.py  dataConvert.py  gfmExternalFiles.py  helper.py  job_monitor.py  loadExtern.py  metaPlots.py  parallelSort.pyx  png.py  rotation.py  simParams.py  sphMap.py  subfind.py  tpcf.py  tracerMC.py  treeSearch.py  units.py  voronoi.py  voronoiRay.py
vis/: __init__.py  arepovtk.py  box.py  boxDrivers.py  boxMovieDrivers.py  common.py  compareTwoHalos.py  globalComp.py  halo.py  haloDrivers.py  haloMovieDrivers.py  lic.py  pyramid.py
(+277 files in other folders)
