[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "temet"
]

[tool.setuptools.package-data]
temet = ["temet/matplotlibrc", "temet/util/*.cpp"]

[project]
name = "temet"
version = "0.9"
authors = [
    { name="Dylan Nelson", email="dnelson@uni-heidelberg.de" },
]
description="temet simulation analysis framework."
readme = "README.md"
requires-python = ">3.12.0"
dependencies = [
    "astropy",
    "cmocean",
    #"corner",
    #"emcee",
    #"fsps",
    "h5py",
    #"healpy",
    "matplotlib",
    "numba",
    "numpy",
    #"psutil",
    #"requests",
    #"requests-oathlib",
    "scipy",
    #"astro-sedpy",
    #"astro-prospector",
    #"reproject",
    #"scikit-image",
    #"pybind11",
    #"sphinx",
    "illustris_python @ git+https://github.com/illustristng/illustris_python@master"
]

[project.urls]
"Homepage" = "https://www.github.com/dnelson86/temet/"
"Bug Tracker" = "https://www.github.com/dnelson86/temet/issues"
"Documentation" = "https://temet.tng-project.org/"

# todo:
# Roboto font
# download tables/
# install FSPS
# download AtomDB tables

# compile any external/c++ bindings
#cmd = "c++ -O3 -Wall -shared -std=c++11 -fopenmp -D_GLIBCXX_PARALLEL -fPIC $(python3 -m pybind11 --includes) parallelSort.cpp -o parallelSort.so"
#cwd = install_path / "util"
#run(cmd, shell=True, cwd=cwd)

# install SKIRT
