[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "temet"
]

[tool.setuptools.package-data]
temet = ["temet/matplotlibrc", "temet/util/*.cpp"]

[project]
name = "temet"
version = "0.9"
authors = [
    { name="Dylan Nelson", email="dnelson@uni-heidelberg.de" },
]
description="temet simulation analysis framework."
readme = "README.md"
requires-python = ">3.11.0"
dependencies = [
    "astropy",
    "cmocean",
    #"corner",
    #"emcee",
    #"fsps",
    "h5py",
    #"healpy",
    "matplotlib",
    "numba",
    "numpy",
    #"psutil",
    #"pyslurm",
    #"requests",
    #"requests-oathlib",
    "scipy",
    #"astro-sedpy",
    #"astro-prospector",
    #"reproject",
    #"scikit-image",
    #"pybind11",
    #"illustris_python @ git+https://github.com/illustristng/illustris_python@master",
    #"torch",
    #"torchvision",
    #"tensorboard",
    #"sbi",
    #"sphinx", "breathe", "exhale", 
    #"buildbot",
    #"pytest", "pytest-cov",
]
keywords = ["astronomy", "simulation", "cosmology", "astrophysics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
"Homepage" = "https://www.github.com/dnelson86/temet/"
"Bug Tracker" = "https://www.github.com/dnelson86/temet/issues"
"Documentation" = "https://temet.tng-project.org/"

# todo:
# Roboto font
# download tables/
# download AtomDB tables

# compile any external/c++ bindings
#cmd = "c++ -O3 -Wall -shared -std=c++11 -fopenmp -D_GLIBCXX_PARALLEL -fPIC $(python3 -m pybind11 --includes) parallelSort.cpp -o parallelSort.so"
#cwd = install_path / "util"
#run(cmd, shell=True, cwd=cwd)

[tool.pytest]
markers = ["requires_data: requires access to (original) data files.", "slow: test is long-running."]

[tool.ruff]
#target-version = "py311"
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "UP031", # Use format specifiers instead of percent format
]